Refactor MCP API