@@ -17,10 +17,12 @@
 
 package org.apache.shardingsphere.test.e2e.mcp.support.fixture.plugin;
 
+import org.apache.shardingsphere.mcp.api.common.descriptor.MCPIcon;
 import org.apache.shardingsphere.mcp.api.protocol.response.MCPResponse;
 import org.apache.shardingsphere.mcp.api.resource.MCPResourceHandler;
 import org.apache.shardingsphere.mcp.api.resource.MCPUriVariables;
-import org.apache.shardingsphere.mcp.api.resource.descriptor.MCPResourceAnnotations;
+import org.apache.shardingsphere.mcp.api.common.descriptor.MCPAnnotations;
+import org.apache.shardingsphere.mcp.api.resource.descriptor.MCPFixedResourceDescriptor;
 import org.apache.shardingsphere.mcp.api.resource.descriptor.MCPResourceDescriptor;
 import org.apache.shardingsphere.mcp.core.context.MCPServiceHandlerContext;
 import org.apache.shardingsphere.mcp.support.protocol.response.MCPMapResponse;
@@ -43,9 +45,10 @@ public final class PluginFixtureStatusResourceHandler implements MCPResourceHand
     
     @Override
     public MCPResourceDescriptor getResourceDescriptor() {
-        return new MCPResourceDescriptor(URI_PATTERN, "test-fixture-status", "Test Fixture Status", "Read the packaged MCP test fixture status used by e2e plugin discovery tests.", "application/json",
-                Collections.emptyList(),
-                MCPResourceAnnotations.EMPTY, null, null, null, Collections.emptyList(), Collections.emptyList(), Collections.emptyList(), Collections.emptyMap());
+        return new MCPFixedResourceDescriptor(URI_PATTERN, "test-fixture-status", "Test Fixture Status",
+                "Read the packaged MCP test fixture status used by e2e plugin discovery tests.",
+                List.of(new MCPIcon("https://example.invalid/test-fixture-status.png", "image/png", List.of("64x64"), "light")), "application/json", MCPAnnotations.EMPTY, null,
+                Collections.emptyMap());
     }
     
     @Override
